--- a/CountingFunction/MainWindow.xaml
+++ b/CountingFunction/MainWindow.xaml
@@ -19,7 +19,7 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="0.8*" />
         </Grid.ColumnDefinitions>
-
+        
         <ListBox Grid.Column="0" ItemsSource="{Binding FunctionInfos}"
                  SelectedItem="{Binding SelectedFunctionInfo}">
             <ListBox.ItemTemplate>
@@ -41,7 +41,7 @@
                 <TextBlock Text="Выберите коэффициент c" />
                 <ComboBox ItemsSource="{Binding Path=c, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Path=CurrentC}" />
             </StackPanel>
-            <DataGrid AutoGenerateColumns="false" HorizontalAlignment="Left" ItemsSource="{Binding Results}" SelectedItem="{Binding SelectedTable}" VerticalAlignment="Top" >
+            <DataGrid AutoGenerateColumns="false" HorizontalAlignment="Left" ItemsSource="{Binding Results}" SelectedItem="{Binding SelectedTable}" VerticalAlignment="Top" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" MaxHeight="275">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding Path=x}" Header="x" Width="*"/>
                     <DataGridTextColumn Binding="{Binding Path=y}" Header="y" Width="*" />
