--- a/CountingFunction/MainWindow.xaml
+++ b/CountingFunction/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CountingFunction"
         mc:Ignorable="d"
-        Title="Counting Functions" Height="450" Width="800">
+        Title="Counting Functions" Height="450" Width="800" MinHeight="450" MinWidth="800">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="14" />
