--- a/CountingFunction/MainWindow.xaml
+++ b/CountingFunction/MainWindow.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         xmlns:local="clr-namespace:CountingFunction"
         mc:Ignorable="d"
-        Title="Counting Functions" Height="450" Width="800" MinHeight="450" MinWidth="800">
+        Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="14" />
@@ -19,33 +20,34 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="0.8*" />
         </Grid.ColumnDefinitions>
-        
-        <ListBox Grid.Column="0" ItemsSource="{Binding FunctionInfos}"
-                 SelectedItem="{Binding SelectedFunctionInfo}">
+
+        <ListBox Grid.Column="0" ItemsSource="{Binding FunctionsList}"
+                 SelectedItem="{Binding SelectedFunctionType}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5">
-                        <TextBlock Text="{Binding Path=FunctionName}" />
-                        <TextBlock Text="{Binding Path=Function}" />
+                        <TextBlock Text="{Binding Path=FunctionName}"/>
+                        <TextBlock Text="{Binding Path=Function}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
         <StackPanel Grid.Column="1">
-            <StackPanel DataContext="{Binding SelectedFunctionInfo}">
+            <StackPanel DataContext="{Binding FunctionViewModel}">
                 <TextBlock Text="Выбранный элемент:"  />
                 <TextBlock Text="Введите коэффициент а" />
-                <TextBox Text="{Binding A, UpdateSourceTrigger=PropertyChanged, Delay=250}" />
+                <TextBox Text="{Binding A, UpdateSourceTrigger=PropertyChanged, Delay=250}"/>
                 <TextBlock Text="Введите коэффициент b" />
-                <TextBox Text="{Binding B, UpdateSourceTrigger=PropertyChanged, Delay=250}" />
+                <TextBox Text="{Binding B, UpdateSourceTrigger=PropertyChanged, Delay=250}"/>
                 <TextBlock Text="Выберите коэффициент c" />
-                <ComboBox ItemsSource="{Binding Path=C, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Path=CurrentC}" />
+                <ComboBox ItemsSource="{Binding C}" SelectedItem="{Binding CurrentC, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
-            <DataGrid AutoGenerateColumns="false" HorizontalAlignment="Left" ItemsSource="{Binding Results}" SelectedItem="{Binding SelectedTable}" VerticalAlignment="Top" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" MaxHeight="275">
+
+            <DataGrid AutoGenerateColumns="false" ItemsSource="{Binding Results}" SelectedItem="{Binding SelectedResult}" HorizontalAlignment="Left" VerticalAlignment="Top" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" MaxHeight="275">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Path=X, Delay=150}" Header="x" Width="*"/>
-                    <DataGridTextColumn Binding="{Binding Path=Y, Delay=150}" Header="y" Width="*" />
-                    <DataGridTextColumn Binding="{Binding Path=Fxy}" Header="f(x,y)" Width="*" IsReadOnly="True" />
+                    <DataGridTextColumn Binding="{Binding Path=X, UpdateSourceTrigger=PropertyChanged, Delay=150}" Header="x" Width="*"/>
+                    <DataGridTextColumn Binding="{Binding Path=Y, UpdateSourceTrigger=PropertyChanged, Delay=150}" Header="y" Width="*" />
+                    <DataGridTextColumn Binding="{Binding Path=Fxy}" Header="fxy" Width="*" IsReadOnly="True" />
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
