--- a/CountingFunction/MainWindow.xaml
+++ b/CountingFunction/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         xmlns:local="clr-namespace:CountingFunction"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Counting Functions" Height="450" Width="800" MinHeight="450" MinWidth="800">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="14" />
